[package]
name = "macos-unifiedlogs"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
codegen-units = 1
lto = "yes"
strip = "debuginfo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
log = { version = "0.4.22", default-features = false }
lz4_flex = { version = "0.11.3", default-features = false }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
plist = { version = "1.7.0" }
regex = { version = "1.11.0", default-features = false }
base64 = { version = "0.22.1", default-features = false }
serde_json = "1.0.128"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

[dev-dependencies]
criterion = "0.5.1"
#simplelog = "0.12.2"
#csv = "1.3.0"
#chrono = "0.4.38"

[[bench]]
name = "monterey_benchmark"
harness = false
